improved ranking and ranking naming of summary files.